Changelog
=========

3.0rc5 - Unreleased
-------------------

* Include ``simplejson`` only on Plone 3 environment
  [keul]

3.0rc4 - 2011-06-05
-------------------

* Fixed wrong GS import step dependenciences. Fixes
  http://plone.org/products/collective-flowplayer/issues/12
  [naro]

* added script for rebuild all .po files
  [keul]

* added italian translation
  [keul]

3.0rc3 - 2011-05-23
-------------------

* fixed http://plone.org/products/collective-flowplayer/issues/8
  ValueError("Can't commit with opened blobs.")
  [naro]

* Update to Flowplayer 3.2.7 and latest plugin versions.
  [elro]

* Only generate a minimal config global object. Move remaining javascript to a
  separate file in a resource directory to simplify checking with jslint and
  customisation.
  [elro]

* Add french translation
  [toutpt]

* Make kupu setup conditionnal.
  Fix the kupu import step dependency.
  [kiorky]

3.0rc2 - 2010-11-15
-------------------

* Dexterity behavior and view for file content.
  [elro]

* Split base configuration out from AT specific configuration.
  [elro]

* Updated to Flowplayer 3.2.5 (plugins updated to latest version)
  [naro]

* Added iPad/iPhone javascript plugin. Plugin is avalable to custom use, but
  not included in javascript configuration by default. 
  [naro]

* Fix metadata parsing of links caused by redesign with new parsing framework.
  [thet]

* CSS simplification.
  [thet]

* Don't set flowplayer's width per javascript for audio files. Let it be set by
  css. Besides a simplification this change also allows easy overriding.
  [thet]

* Don't hide flowplayer controls in when loading audio files
  [thet]

* Code cleanup in events.py
  [thet]

* Metadata extraction with hachoir library instead of own flv-only
  implementation. Code partially taken from p4a.video.
  [thet]

* Test fixes and cleanups
  [thet]

* made zope2 products from collective.flowplayer to be able to provide
  uninstall profile.
  [naro]
